# asvspoof-2021-baseline

LA/: .gitignore
LA/Baseline-RawNet2/: pyproject.toml
LA/Baseline-RawNet2/tools/: cmhub_score.py  cmhub_train.py
